--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">List My Book Pro</string>
+
+    <string name="app_name">Book Listing App</string>
     <string name="search_button_name">search</string>
     <string name="no_internet_connection">No internet connection.</string>
     <string name="no_books">No books found.</string>
     <string name="search_view_hint">Enter a book title</string>
     <string name="search_hint">Enter a title</string>
+
 </resources>
